# acre-forensics-fastapi

./: .aiexclude  .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.json  worker-configuration.d.ts  wrangler.jsonc
forensics_fastapi/: AGENTS.md  check_config.py  cli.py  config.py  pytest.ini
forensics_fastapi/agents/: agents  base.py  classifier.py  forensic.py  regulatory.py  strategy.py
forensics_fastapi/core/: core  host_client.py  worker_ai.py
forensics_fastapi/fast_api_agents/: base.py  chat.py  it.py  orchestrator.py  team.py  verification.py
forensics_fastapi/forensics/: __init__.py  agent_client.py  ai_labeler.py  api.py  atomizer.py  attribution.py  cloudflare_ops.py  engagement_models.py  gmail_collector.py  gmail_models.py  ingestion.py  logger.py  pipeline.py  remote_worker_api.py  reporter.py  verification.py  worker_manager.py
forensics_fastapi/forensics/attachments/: extractor.py  pipeline.py
forensics_fastapi/forensics/evidence/: franken_test.eml
forensics_fastapi/forensics/routers/: cli_router.py  commands.py  container.py  engagements.py  (+4 more)
forensics_fastapi/scripts/: create_forensics_poc_notebook.py  debug_schema.py  fix_notebook.py  generate_embeddings.py  preload_nltk.py  run_auto_rag.py  run_forensic_analysis.py  synthesize_report.py  verify_health.py
forensics_fastapi/tests/: conftest.py  test_api.py  test_container_control.py  test_exec.py  test_live_monitor.py
src/: index.ts
src/sandboxsdk/: boot.sh  controller.ts  pipeline.ts  routes.ts  test-connection.ts
(+12 files in other folders)
